add trigger for PR push to test

--- a/.github/workflows/python-integration-tests.yml
+++ b/.github/workflows/python-integration-tests.yml
@@ -8,6 +8,8 @@ on:
   workflow_dispatch:
   push:
     branches: [ "main"]
+  pull_request:
+    branches: [ "main"] # TODO: remove before pushing to main
   schedule:
     - cron: '0 */12 * * *' # Run every 12 hours: midnight UTC and noon UTC
 
